[package]
name = "textile"
version = "0.1.0"
authors = ["pavchip <pavchip@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavchip/textile-rs"
homepage = "https://github.com/pavchip/textile-rs"
documentation = "https://docs.rs/textile/0.1.0/textile/"
description = "Native Rust crate for parsing and rendering into HTML the Textile markup language"

[dependencies]
pipeline = "0.5.0"
regex = "0.1.80"
