[package]
name = "textile"
version = "0.2.1"
authors = ["pavchip <pavchip@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavchip/textile-rs"
homepage = "https://github.com/pavchip/textile-rs"
documentation = "https://docs.rs/textile/0.2.1/textile/"
description = "Native Rust crate for parsing and rendering into HTML the Textile markup language"

[dependencies]
regex = "0.1.80"
lazy_static = "0.2.2"
url = "1.2.3"

[dev-dependencies]
maplit = "0.1.4"
