[package]
name = "textile"
version = "0.3.0-dev"
authors = ["Pavel Chistyakov <pavchip@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavchip/textile-rs"
homepage = "https://github.com/pavchip/textile-rs"
documentation = "https://docs.rs/textile/0.2.1/textile/"
description = "Native Rust crate for parsing and rendering into HTML the Textile markup language"
keywords = ["text", "textile", "html", "markup", "language"]

[dependencies]
clap = "2.19.1"
lazy_static = "0.2.2"
regex = "0.1.80"
url = "1.2.3"

[dev-dependencies]
maplit = "0.1.4"

[[bin]]
name = "textile"
test = false
doc = false
